# dbx-r

./: .gitignore  CLAUDE.md  Makefile  README.md  ROBOTS_SPEC.md  WEEKEND_RUNBOOK.md  pyproject.toml
bdx/: persona.py
bdx/audio/: __init__.py  droidspeak.py
bdx_a/design/: params.yaml
common/: params.py
common/cad_lib/: charging_base.py  components.py  coupons.py  edulite.py  export.py  feetech.py  interference.py  part_meta.py  registry.py  (+3 more)
docs/: BOM.md  DECISIONS.md  LICENSES.md
orchestrator/: stages.yaml  weekend.py
rocky/: carapace.py  persona.py
scratchpad_step2/: build_shells.py  chassis_measure.py  clean_validate.py  leg_frames.json  leg_frames.py  measure.py  render_shells.py  seg_measure.py  shells_report.json
scripts/: annotate_build_plan.py  blender_actionfig.py  blender_actionfig_legs.py  blender_actionfig_render.py  blender_actionfig_shells.py  blender_rocky.py  blender_rocky_hand_isolate.py  blender_rocky_official.py  blender_rocky_profile.py  blender_rocky_refine.py  blender_segment_rocky.py  blender_wrist_cuff.py  blender_wrist_cuff_render.py  build_leg_chassis.py  build_pitch_transmission.py  build_plan_rocky.py  cadpy  compare_voice.py  fetch_upstream.sh  gen_audio_demos.py  gen_bdx_droidspeak.py  gen_cad.py  gen_descriptions.py  gen_integration_report.py  gen_reports.py  gen_rocky_phrase_cache.py  gen_rocky_voice.py  gen_weekend_report.py  measure_shell_cavity.py  plot_voice_rms.py  render_carapace_mech.py  render_dejointed_v2_check.py  render_grip_mech.py  render_hand_2plus1.py  render_leg3_inspect.py  render_leg_chassis.py  render_leg_orientation.py  render_legs_3angles.py  render_phase3_repaired.py  render_pitch_transmission.py  (+16 more)
tests/: test_audio.py  test_bdxr.py  test_cad.py  test_descriptions.py  test_droidspeak.py  test_params.py  test_persona.py  test_qa.py  test_torque.py  test_voice.py
(+137 files in other folders)
