[project]
name = "duet"
version = "0.1.0"
description = "PROJECT DUET — BDX-A + ROCKY-5 unattended build pipeline (host tools)"
requires-python = ">=3.11"
# Host-side dependencies only (CAD/audio/tests/orchestrator). Isaac/RL deps live
# inside the pinned Isaac Lab 2.3.x ARM container, never installed on the host.
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
    "trimesh>=4.0",
    "numpy-stl>=3.1",
    "build123d>=0.9,<0.10",
    "yourdfpy>=0.0.56",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]           # PEP 420 namespace pkgs: `import common.cad_lib...`
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
# This project is run in-place (make targets), not installed as a wheel.
py-modules = []
