[project]
name = "duet"
version = "0.1.0"
description = "PROJECT DUET — BDX-A + ROCKY-5 unattended build pipeline (host tools)"
requires-python = ">=3.11"
# Host venv deps (aarch64 wheels only): orchestrator, params, mesh QA, URDF load.
# build123d/OCP has NO aarch64 wheel — it lives in the micromamba CAD env built by
# scripts/setup_cad_env.sh (§1 contingency / D-003), reached via scripts/cadpy.
# Isaac/RL deps live inside the pinned Isaac Lab 2.3.x ARM container.
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.26",
    "trimesh>=4.0",
    "numpy-stl>=3.1",
    "manifold3d",
    "rtree",
    "yourdfpy>=0.0.56",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]           # PEP 420 namespace pkgs: `import common.cad_lib...`
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
# This project is run in-place (make targets), not installed as a wheel.
py-modules = []
